# NemoClaw

./: .c8rc.json  .dockerignore  .env.example  .gitignore  .jscpd.json  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.base  Makefile  README.md  SECURITY.md  install.sh  package-lock.json  package.json  spark-install.md  tmp-debt-client.rs
.devcontainer/: README.md  devcontainer.json  postCreate.sh
.github/: BRANCH_PROTECTION.md  CODEOWNERS  DEPLOYMENT.md  branch-protection.json  dependabot.yml  pull_request_template.md
.openclaw/: autonomous-config.json
docs/: CONTRIBUTING.md  README.md  autonomous-agents.md  code-quality.md  conf.py  deployment.md  error-to-insight-pipeline.md  feature-flags.md  index.md  observability.md  product-analytics.md  project.json  releases.md  reliability-plan.md  runbooks.md  testing.md  versions1.json
nemoclaw/: eslint.config.mjs  knip.json  package-lock.json  package.json  tsconfig.json  typedoc.json  vitest.config.ts
nemoclaw-blueprint/: .vulture  Makefile  blueprint.yaml  pyproject.toml
nemoclaw-blueprint/orchestrator/: runner.py
nemoclaw-blueprint/policies/: openclaw-sandbox.yaml
nemoclaw-blueprint/policies/presets/: discord.yaml  docker.yaml  github.yaml  huggingface.yaml  jira.yaml  local-inference.yaml  npm.yaml  outlook.yaml  pypi.yaml  slack.yaml  telegram.yaml
nemoclaw-blueprint/tests/: conftest.py  test_runner.py  test_runner_extended.py  test_snapshot.py  test_snapshot_extended.py
scripts/: brev-setup.sh  debug.sh  fix-coredns.sh  generate-changelog.js  install-watchdog-task.ps1  nemoclaw-start.sh  nemoclaw-supervisor.sh  sandbox-backup.sh  sandbox-bootstrap.sh  sandbox-restart.sh  sandbox-restore.sh  sandbox-watchdog.sh  setup.sh  start-supervisor.sh  telegram-bridge.js  tg-bridge-reliable.js  tg-bridge-simple.js  validate-configs.ts  watchdog.ps1  write-openclaw-config.py
src/: nemoclaw.ts
test/: cli.test.ts  credential-exposure.test.ts  credentials-unit.test.js  dns-proxy.test.js  e2e-gateway-isolation.sh  gateway-cleanup.test.js  gateway-state-reconcile-2276.test.ts  gateway-state.test.ts  gemini-probe-auth.test.ts  install-openshell-version-check.test.ts  install-preflight.test.js  install-preflight.test.ts  metrics.test.js  nemoclaw-start.test.js  nemoclaw-start.test.ts  nemotron-inference-fix.test.ts  onboard-readiness.test.js  onboard-selection.test.js  onboard-selection.test.ts  onboard.test.js  onboard.test.ts  policies-unit.test.js  policies.test.js  policies.test.ts  registry.test.ts  resolve-openshell.test.js  (+9 more)
(+134 files in other folders)
